# Circular_spread_in_pure_Cell_DEVS

./: .gitignore  CMakeLists.txt  README.md  approximate_circular_propagation.webm  build_sim.sh
main/: CMakeLists.txt  main.cpp
main/include/: addGridCell.hpp  brainWaveCell.hpp  brainWaveState.hpp
scenarios/: 0_scenario_21x21_offcenter_defaultfiring_config.json
